--- a/outputs/1.0/wrd50/hs_16x16/ctxp_1/R_T/batch/lr_5.00e-03/2018-09-28 110002/valid-eval.props
+++ b/outputs/1.0/wrd50/hs_16x16/ctxp_1/R_T/batch/lr_5.00e-03/2018-09-28 110002/valid-eval.props
@@ -49,9 +49,9 @@ desconhecer	(V*V)
 -	*AM-PRD)
 -	*
 -	(A0*
--	*
--	*
 -	*A0)
+-	(AM-TMP*
+-	*AM-TMP)
 apontar	(V*V)
 -	(A1*
 -	*
@@ -145,9 +145,9 @@ realizar	*V)
 -	*
 -	(AM-TMP*AM-TMP)
 -	*
+-	(AM-TMP*
 -	*
--	*
--	*
+-	*AM-TMP)
 -	*
 
 -	*
@@ -179,7 +179,7 @@ trazer	(V*V)
 -	*
 -	*
 -	*
--	(A0*A0)
+-	(A1*A1)
 vir	(V*V)
 -	(A2*
 -	*
@@ -187,6 +187,7 @@ vir	(V*V)
 -	*
 -	*A2)
 -	*
+-	(AM-MNR*
 -	*
 -	*
 -	*
@@ -196,8 +197,7 @@ vir	(V*V)
 -	*
 -	*
 -	*
--	*
--	*
+-	*AM-MNR)
 -	*
 
 -	(AM-NEG*AM-NEG)
@@ -374,7 +374,7 @@ garantir	(V*V)
 -	*A1)
 -	*
 produzir	(V*V)
--	(A0*
+-	(A2*
 -	*
 -	*
 -	*
@@ -382,13 +382,13 @@ produzir	(V*V)
 -	*
 -	*
 -	*
--	*A0)
 -	*
 -	*
 -	*
 -	*
 -	*
 -	*
+-	*A2)
 -	*
 
 -	*
@@ -417,10 +417,10 @@ ter	(V*V)
 explicar	(V*V)
 -	*
 
--	(AM-PNC*
 -	*
 -	*
--	*AM-PNC)
+-	*
+-	*
 -	*
 -	(AM-NEG*AM-NEG)
 -	*
@@ -556,7 +556,7 @@ beneficiar	(V*V)
 -	*AM-PNC)
 
 -	*
--	*
+-	(A0*A0)
 -	(AM-TMP*
 -	*AM-TMP)
 demorar	(V*V)
@@ -611,16 +611,6 @@ ter	(V*V)
 -	*
 -	*A1)
 -	*
--	(A3*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*A3)
--	*
 -	(AM-LOC*
 -	*
 -	*
@@ -634,6 +624,16 @@ ter	(V*V)
 -	*
 -	*
 -	*
+-	*AM-LOC)
+-	*
+-	(AM-LOC*
+-	*
+-	*
+-	*
+-	*
+-	*AM-LOC)
+-	*
+-	(AM-LOC*
 -	*
 -	*AM-LOC)
 -	*
@@ -649,18 +649,18 @@ ter	(V*V)
 -	*
 -	*
 dizer	(V*V)
--	(A0*
+-	(A1*
 -	*
 -	*
--	*
--	*A0)
--	*
--	(AM-LOC*
--	*
--	*
--	*AM-LOC)
--	*
+-	*A1)
 -	(AM-MNR*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -678,8 +678,8 @@ dizer	(V*V)
 ter	(V*V)
 -	(A1*
 -	*
--	*A1)
 -	*
+-	*A1)
 -	*
 
 -	(A0*A0)
@@ -750,7 +750,7 @@ receber	(V*V)
 ver	(V*V)
 -	(A1*
 -	*A1)
--	(AM-TMP*AM-TMP)
+-	(AM-MNR*AM-MNR)
 -	*
 
 -	*
@@ -777,10 +777,10 @@ precisar	(V*V)
 -	*
 -	*
 -	*
--	*
--	*
--	*
 -	*A1)
+-	*
+-	*
+-	*
 
 -	(A0*
 -	*A0)
@@ -860,9 +860,9 @@ atacar	(V*V)
 -	*
 -	*
 -	*
+-	(A2*
 -	*
--	(V*V)
--	*
+-	*A2)
 ter	(V*V)
 -	(A0*
 -	*
@@ -883,17 +883,17 @@ ter	(V*V)
 -	*
 -	*
 -	*
+-	(AM-DIS*
 -	*
--	*
--	*
+-	*AM-DIS)
 -	*
 
 -	*
 -	*
--	(A0*A0)
 -	*
 -	*
 -	*
+-	(A1*A1)
 -	*
 -	*
 -	*
@@ -910,9 +910,9 @@ ficar	(V*V)
 -	*
 -	*
 -	*
+-	*
 -	*A2)
 -	(A1*
--	*
 -	*
 -	*
 -	*
@@ -974,8 +974,8 @@ prever	(V*V)
 -	*A1)
 -	*
 
--	(AM-DIS*
--	*AM-DIS)
+-	*
+-	(A0*A0)
 -	*
 -	(A0*
 -	*
@@ -1054,21 +1054,21 @@ levantar	(V*V)
 -	*
 -	*
 -	*
+-	*
 -	*A1)
 -	*
--	*
 confirmar	(V*V)
--	(A2*
+-	(AM-MNR*
 -	*
--	*A2)
+-	*AM-MNR)
 -	*
 
 -	(A0*
 -	*
 -	*
+-	*A0)
 -	*
--	*
--	*
+-	(A0*
 -	*
 -	*
 -	*
@@ -1195,8 +1195,8 @@ anunciar	(V*V)
 -	*
 -	*
 
--	(A1*
--	*A1)
+-	(A0*
+-	*A0)
 ficar	(V*V)
 -	(A2*
 -	*
@@ -1288,8 +1288,8 @@ faltar	(V*V)
 -	*
 -	*AM-PRD)
 
--	(A0*
--	*A0)
+-	(A1*
+-	*A1)
 -	*
 -	*
 viver	(V*V)
@@ -1391,8 +1391,8 @@ faltar	(V*V)
 
 -	(A0*A0)
 -	(AM-ADV*AM-ADV)
-ter	(V*V)
--	(A2*A2)
+ter	(V*
+-	*V)
 -	*
 -	*
 -	*
@@ -1414,9 +1414,9 @@ ter	(V*V)
 -	*
 -	*
 -	*
--	(A0*
 -	*
--	*A0)
+-	*
+-	(A0*A0)
 renovar	(V*V)
 -	(A1*
 -	*
@@ -1430,14 +1430,14 @@ renovar	(V*V)
 -	*
 
 -	*
--	(AM-NEG*AM-NEG)
+-	*
 -	(A1*A1)
 acontecer	(V*V)
 -	*
 -	*
--	(A1*
 -	*
--	*A1)
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -1450,8 +1450,8 @@ acontecer	(V*V)
 -	*
 -	*
 
--	*
 -	(A1*
+-	*
 -	*
 -	*
 -	*
@@ -1493,10 +1493,10 @@ saber	(V*V)
 começar	(V*V)
 -	(A1*
 -	*
--	*
--	*
--	*
 -	*A1)
+-	(AM-LOC*
+-	*
+-	*AM-LOC)
 -	*
 -	(AM-TMP*
 -	*AM-TMP)
@@ -1548,8 +1548,8 @@ ganhar	(V*V)
 -	*
 -	*
 -	*
--	*
--	*
+-	(AM-PRD*
+-	*AM-PRD)
 -	*
 -	(A0*A0)
 disputar	(V*V)
@@ -1603,9 +1603,9 @@ multar	(V*V)
 -	*
 -	*A0)
 autuar	(V*V)
--	(AM-EXT*AM-EXT)
+-	(AM-TMP*
+-	*AM-TMP)
 -	(A2*
--	*
 -	*A2)
 -	(A1*
 -	*
@@ -1671,11 +1671,11 @@ chegar	(V*V)
 aplicar	(V*V)
 -	(A1*
 -	*A1)
+-	(A2*
+-	*
+-	*
+-	*A2)
 -	(AM-TMP*
--	*
--	*
--	*
--	*
 -	*
 -	*
 -	*
@@ -1761,11 +1761,11 @@ fazer	(V*V)
 aconselhar	(V*V)
 -	(A1*
 -	*A1)
--	(A2*
+-	(AM-MNR*
 -	*
 -	*
 -	*
--	*A2)
+-	*AM-MNR)
 -	*
 -	*
 -	*
@@ -1822,9 +1822,9 @@ perder	(V*V)
 -	*
 -	*
 
--	(A0*
+-	(A1*
 -	*
--	*A0)
+-	*A1)
 -	*
 -	*
 -	*
@@ -1880,9 +1880,9 @@ cumprir	(V*V)
 -	*
 -	*
 
--	(AM-LOC*
 -	*
--	*AM-LOC)
+-	*
+-	*
 -	*
 -	(A0*A0)
 preferir	(V*V)
@@ -1933,7 +1933,7 @@ dizer	(V*V)
 -	*
 -	*
 -	*
--	*
+-	(A1*A1)
 querer	(V*V)
 -	*
 -	*
@@ -2024,12 +2024,12 @@ simpatizar	(V*V)
 -	*
 -	*
 -	*
+-	(A0*A0)
+-	(AM-LOC*
+-	*
+-	*
+-	*AM-LOC)
 -	(A0*
--	*
--	*
--	*
--	*
--	*
 -	*A0)
 ganhar	(V*
 -	*V)
@@ -2052,17 +2052,17 @@ narrar	(V*V)
 -	(A1*
 -	*
 -	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*A1)
--	(AM-LOC*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*AM-LOC)
 -	*
 
 haver	(V*V)
@@ -2104,7 +2104,7 @@ separar	(V*V)
 -	*
 
 -	*
--	(A1*A1)
+-	(A0*A0)
 ocorrer	(V*V)
 -	*
 -	*
@@ -2180,19 +2180,19 @@ dar	(V*V)
 -	*
 -	*
 -	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*A1)
--	(AM-LOC*
--	*
--	*
--	*
--	*
--	*AM-LOC)
--	*
--	*
--	*
--	*
--	*
--	*
 -	*
 
 -	*
@@ -2239,9 +2239,9 @@ dar	(V*V)
 expulsar	(V*V)
 -	*
 
+-	(AM-TMP*
 -	*
--	*
--	*
+-	*AM-TMP)
 -	*
 -	*
 -	*
@@ -2260,12 +2260,12 @@ expulsar	(V*V)
 adotar	*V)
 -	(A1*
 -	*
--	*
--	*
--	*
--	*
--	*
 -	*A1)
+-	(AM-CAU*
+-	*
+-	*
+-	*
+-	*AM-CAU)
 -	*
 
 -	*
@@ -2324,11 +2324,11 @@ dizer	(V*V)
 -	*
 -	*
 estar	(V*V)
--	(AM-LOC*
+-	(A2*
 -	*
 -	*
 -	*
--	*AM-LOC)
+-	*A2)
 -	*
 -	*
 -	*
@@ -2370,9 +2370,9 @@ estar	(V*V)
 -	(A1*A1)
 -	*
 ir	(V*V)
--	(A2*
+-	(AM-MNR*
 -	*
--	*A2)
+-	*AM-MNR)
 -	*
 -	*
 -	*
@@ -2440,12 +2440,12 @@ estar	(V*V)
 -	*
 -	*
 -	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*AM-LOC)
--	*
--	*
--	*
--	*
--	*
 -	*
 
 -	(AM-TMP*
@@ -2519,14 +2519,14 @@ firmar	(V*V)
 -	*
 -	*
 -	*
--	(A0*A0)
+-	(A1*A1)
 valer	(V*V)
--	(AM-TMP*
+-	(AM-LOC*
 -	*
 -	*
 -	*
 -	*
--	*AM-TMP)
+-	*AM-LOC)
 -	*
 
 -	(AM-DIS*
@@ -2536,7 +2536,11 @@ valer	(V*V)
 -	(A1*
 -	*A1)
 crescer	(V*V)
--	(A3*
+-	(A2*
+-	*
+-	*
+-	*A2)
+-	(AM-LOC*
 -	*
 -	*
 -	*
@@ -2549,11 +2553,7 @@ crescer	(V*V)
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
--	*A3)
+-	*AM-LOC)
 -	*
 
 -	*
@@ -2791,7 +2791,7 @@ estar	(V*V)
 -	*
 -	*
 
--	*
+-	(A1*A1)
 -	*
 -	*
 -	*
@@ -2830,15 +2830,15 @@ subir	(V*V)
 -	*AM-LOC)
 -	*
 
--	(A0*
--	*A0)
+-	(A2*
+-	*A2)
 -	*
 -	(A0*A0)
 -	(AM-NEG*AM-NEG)
 falar	(V*V)
--	(A1*
+-	(A2*
 -	*
--	*A1)
+-	*A2)
 -	*
 
 -	*
@@ -2859,18 +2859,18 @@ estimular	(V*V)
 -	*AM-MNR)
 -	*
 
+-	(A3*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*A3)
 -	(A0*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*A0)
 ganhar	(V*V)
 -	(A0*
@@ -2918,16 +2918,16 @@ vir	(V*V)
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*A0)
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 
 -	*
 -	*
@@ -3034,8 +3034,8 @@ substituir	(V*V)
 -	*
 -	*
 ter	(V*V)
--	(A1*
 -	*
+-	(A1*
 -	*
 -	*
 -	*
@@ -3046,9 +3046,9 @@ ter	(V*V)
 -	*A1)
 -	*
 
--	(AM-LOC*
 -	*
--	*AM-LOC)
+-	*
+-	*
 -	(A0*
 -	*
 -	*
@@ -3123,8 +3123,8 @@ proibir	(V*V)
 -	*
 -	*A1)
 
--	*
 -	(A1*
+-	*
 -	*A1)
 estar	(V*V)
 -	(A2*
@@ -3171,13 +3171,13 @@ iniciar	(V*V)
 -	(AM-TMP*AM-TMP)
 -	*
 
--	(AM-ADV*
+-	(AM-DIS*
 -	*
 -	*
 -	*
 -	*
 -	*
--	*AM-ADV)
+-	*AM-DIS)
 -	*
 -	(A1*
 -	*
@@ -3363,8 +3363,8 @@ sequestrar	(V*V)
 -	*
 -	*
 -	*
--	(A0*
--	*A0)
+-	(A1*
+-	*A1)
 -	*
 confundir	(V*V)
 -	(AM-MNR*
@@ -3396,7 +3396,7 @@ receber	(V*V)
 -	(AM-TMP*
 -	*
 -	*AM-TMP)
--	(A0*
+-	(AM-MNR*
 -	*
 -	*
 -	*
@@ -3410,7 +3410,7 @@ receber	(V*V)
 -	*
 -	*
 -	*
--	*A0)
+-	*AM-MNR)
 -	*
 
 -	(AM-LOC*
@@ -3453,9 +3453,9 @@ bater	(V*V)
 -	*
 -	*AM-MNR)
 
--	(A1*
+-	(A1*A1)
 -	*
--	*A1)
+-	*
 -	*
 ficar	(V*V)
 -	(A2*
@@ -3598,12 +3598,12 @@ marcar	(V*V)
 -	*A2)
 -	*
 
+-	(AM-PNC*
 -	*
 -	*
 -	*
 -	*
--	*
--	*
+-	*AM-PNC)
 -	*
 participar	(V*V)
 -	(A1*
@@ -3684,9 +3684,9 @@ representar	(V*V)
 -	*
 
 gostar	(V*V)
--	(A2*
+-	(A1*
 -	*
--	*A2)
+-	*A1)
 -	*
 -	*
 -	*
@@ -3699,9 +3699,9 @@ gostar	(V*V)
 -	*
 -	*
 
--	*
--	*
 -	(A1*
+-	*
+-	*
 -	*
 -	*A1)
 resolver	(V*V)
@@ -3721,8 +3721,8 @@ resolver	(V*V)
 -	*
 -	*
 -	*
-pegar	(A1*
--	*
+pegar	(V*V)
+-	(A1*
 -	*A1)
 -	*
 -	*
@@ -3742,9 +3742,9 @@ pegar	(A1*
 -	*
 -	*
 fazer	(V*V)
--	(AM-LOC*
+-	(A2*
 -	*
--	*AM-LOC)
+-	*A2)
 -	*
 
 -	(A0*
@@ -3759,11 +3759,11 @@ encaixar	*V)
 -	*A1)
 -	*
 
--	(AM-TMP*AM-TMP)
+-	(AM-ADV*AM-ADV)
 ter	(V*V)
--	(A1*
--	*
--	*A1)
+-	(AM-EXT*
+-	*AM-EXT)
+-	(A1*A1)
 -	*
 
 -	*
@@ -3778,13 +3778,13 @@ denunciar	(V*V)
 -	(AM-TMP*AM-TMP)
 -	(A1*
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*A1)
+-	(A2*
+-	*
+-	*
+-	*
+-	*
+-	*A2)
 -	*
 
 -	*
@@ -3808,7 +3808,7 @@ mudar	(V*V)
 -	*
 -	*
 
--	(A0*
+-	(A1*
 -	*
 -	*
 -	*
@@ -3819,7 +3819,7 @@ mudar	(V*V)
 -	*
 -	*
 -	*
--	*A0)
+-	*A1)
 -	(AM-TMP*
 -	*AM-TMP)
 depender	(V*V)
@@ -3866,11 +3866,11 @@ desestimular	(V*V)
 -	(A1*
 -	*
 -	*
--	*
--	*
--	*
--	*
 -	*A1)
+-	(AM-MNR*
+-	*
+-	*
+-	*AM-MNR)
 -	*
 
 -	(A1*A1)
@@ -3879,7 +3879,7 @@ oferecer	(V*V)
 -	(A2*
 -	*A2)
 -	*
--	(AM-PRD*
+-	(AM-PNC*
 -	*
 -	*
 -	*
@@ -3888,12 +3888,12 @@ oferecer	(V*V)
 -	*
 -	*
 -	*
--	*AM-PRD)
+-	*AM-PNC)
 -	*
 
-causar	(V*V)
+causar	(V*
+-	*V)
 -	(A0*
--	*
 -	*
 -	*
 -	*
@@ -3948,9 +3948,9 @@ causar	(V*V)
 -	*
 -	*
 -	*
--	(A0*A0)
+-	(A1*A1)
 tratar	(V*V)
--	(A1*
+-	(A2*
 -	*
 -	*
 -	*
@@ -3958,7 +3958,7 @@ tratar	(V*V)
 -	*
 -	*
 -	*
--	*A1)
+-	*A2)
 -	*
 
 chegar	(V*V)
@@ -4259,10 +4259,10 @@ resistir	(V*V)
 -	(A2*
 -	*
 -	*
--	*
--	*
 -	*A2)
 -	(A1*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -4305,11 +4305,11 @@ resistir	(V*V)
 -	*
 -	*
 -	*
--	(A0*A0)
+-	(A1*A1)
 pagar	(V*V)
--	(A2*
+-	(AM-PNC*
 -	*
--	*A2)
+-	*AM-PNC)
 -	*
 -	*
 -	*
@@ -4350,7 +4350,7 @@ pagar	(V*V)
 -	*
 -	*
 -	*
--	*
+-	(A0*A0)
 filmar	(V*V)
 -	*
 -	(A1*A1)
@@ -4411,11 +4411,11 @@ fazer	(V*V)
 -	*
 -	*
 -	*
--	(AM-CAU*
 -	*
 -	*
 -	*
--	*AM-CAU)
+-	*
+-	*
 -	*
 confirmar	(V*V)
 -	*
@@ -4431,12 +4431,12 @@ ver	(V*V)
 -	*
 -	(AM-LOC*
 -	*
--	*
--	*
--	*
--	*
--	*
 -	*AM-LOC)
+-	(AM-TMP*
+-	*
+-	*
+-	*
+-	*AM-TMP)
 -	*
 -	(A1*
 -	*
@@ -4464,11 +4464,11 @@ ver	(V*V)
 -	*A0)
 jogar	(V*V)
 -	(A1*A1)
--	(AM-MNR*
+-	(AM-DIS*
 -	*
 -	*
 -	*
--	*AM-MNR)
+-	*AM-DIS)
 -	*
 
 vencer	(V*V)
@@ -4478,16 +4478,16 @@ vencer	(V*V)
 -	*AM-TMP)
 -	*
 
--	(AM-ADV*AM-ADV)
+-	(AM-DIS*AM-DIS)
 bastar	(V*V)
 -	*
--	(A4*
--	*
--	*
--	*
--	*A4)
--	*
 -	(A1*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*A1)
 -	(AM-ADV*
@@ -4527,14 +4527,14 @@ ancorar	(V*V)
 -	*
 -	*AM-PRD)
 -	*
--	(A0*
+-	(A1*
 -	*
 -	*
 -	*
 -	*
 -	*
 -	*
--	*A0)
+-	*A1)
 -	*
 
 -	*
@@ -4546,8 +4546,8 @@ ancorar	(V*V)
 -	*
 -	*
 -	*
--	(A1*A1)
--	*
+-	(A0*A0)
+-	(AM-REC*AM-REC)
 tornar	(V*V)
 -	(A2*
 -	*
@@ -4590,12 +4590,12 @@ querer	(V*V)
 ir	(V*V)
 -	(A2*
 -	*A2)
--	(AM-CAU*
+-	(AM-LOC*
 -	*
 -	*
 -	*
 -	*
--	*AM-CAU)
+-	*AM-LOC)
 -	*
 
 -	*
@@ -4658,9 +4658,9 @@ saber	(V*V)
 -	*A1)
 -	*
 
+-	(AM-ADV*
 -	*
--	*
--	*
+-	*AM-ADV)
 -	*
 -	*
 -	*
@@ -4685,15 +4685,15 @@ chegar	(V*V)
 -	(AM-TMP*
 -	*AM-TMP)
 -	*
--	(AM-ADV*
+-	(AM-DIS*
 -	*
 -	*
 -	*
 -	*
--	*AM-ADV)
+-	*AM-DIS)
 -	*
 
--	(AM-TMP*AM-TMP)
+-	*
 -	(A0*A0)
 discordar	(V*V)
 -	(A1*
@@ -4710,8 +4710,8 @@ discordar	(V*V)
 -	*
 -	*
 -	*
--	(AM-ADV*
--	*AM-ADV)
+-	(AM-ADV*AM-ADV)
+-	*
 jogar	(V*V)
 -	(AM-LOC*
 -	*
@@ -4721,10 +4721,10 @@ jogar	(V*V)
 -	(A1*
 -	*A1)
 estar	(V*V)
--	(A1*
+-	(A2*
 -	*
 -	*
--	*A1)
+-	*A2)
 -	*
 
 -	*
@@ -4796,12 +4796,12 @@ engatinhar	(V*V)
 -	*
 -	*
 -	*
--	(AM-ADV*
 -	*
 -	*
 -	*
 -	*
--	*AM-ADV)
+-	*
+-	*
 -	*
 -	(AM-TMP*AM-TMP)
 aparecer	(V*V)
@@ -4814,10 +4814,10 @@ aparecer	(V*V)
 -	*A1)
 -	*
 
+-	*
+-	*
+-	*
 -	(AM-LOC*
--	*
--	*
--	*
 -	*
 -	*
 -	*AM-LOC)
@@ -4826,8 +4826,11 @@ querer	(V*V)
 -	(A1*
 -	*
 -	*
+-	*
+-	*
+-	*
+-	*
 -	*A1)
--	(A0*
 -	*
 -	*
 -	*
@@ -4854,9 +4857,6 @@ querer	(V*V)
 -	*
 -	*
 -	*
--	*
--	*
--	*A0)
 -	*
 
 -	(A0*A0)
@@ -4875,14 +4875,14 @@ dizer	(V*V)
 -	*A1)
 -	*
 
--	(AM-CAU*
 -	*
 -	*
 -	*
+-	(A0*
 -	*
 -	*
 -	*
--	*AM-CAU)
+-	*A0)
 -	*
 formar	(V*V)
 -	(A2*
@@ -5055,7 +5055,7 @@ estar	(V*V)
 -	*A2)
 -	*
 
--	(A0*A0)
+-	*
 -	*
 -	*
 -	*
@@ -5073,9 +5073,9 @@ estimular	(V*V)
 -	*
 -	(A0*A0)
 estimular	(V*V)
--	(AM-LOC*
+-	(A2*
 -	*
--	*AM-LOC)
+-	*A2)
 -	(A1*
 -	*
 -	*
@@ -5121,11 +5121,11 @@ eliminar	(V*V)
 causar	(V*V)
 -	(A1*
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*A1)
+-	(A3*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*A3)
